# projetos_pytho

./: README.md
Python_Terminal/: commands.db  database.py  imports.py  main.py  main_plan.py  scan_google_com_1768502926.json
Python_Terminal/Imports/: __init__.py  analyzer_pc.py  baskara.py  c_binario.py  ddos.py  leitor_propriedades.py  music.py  netcat.py  nmap_scan.py  padra_papel_tesoura.py  scanner_web.py  senhas.py  sniffer.py  tcp_server.py
Python_Terminal/beta_teste/: main.py  testes pessoais.py
Python_Terminal/logs/: __init__.py  data_logs.py
Python_Terminal/network/: __init__.py  data_network.py  network_main.py
Python_Terminal/projetos_pytho_main/projetos_menores/: __init__.py  leitor_propriedades.py  padra_papel_tesoura.py
estudo/NetTopologyScanner/NetTopologyScanner/: device_classifier.py  main.py  network_scanner.py  port_scanner.py  pyproject.toml  replit.md  report_generator.py  topology_mapper.py
estudo/codigos-python/incriptador/python/: cesar.py  criptografo.py  invert.py
estudo/estudos_seguranca/Estudos BlackHat Book/PROXY/: proxy.py
estudo/estudos_seguranca/Estudos BlackHat Book/TCP/: tcp_client.py
estudo/estudos_seguranca/Estudos BlackHat Book/UDP/: udp_client.py
estudo/estudos_seguranca/Projetos Pessoais/Brute_Force/: simple_brute.bat
estudo/rsa-em-python/: criptografia.py  numeroPrimo.py
estudos_seguranca/Estudos BlackHat Book/NETCAT/: netcat.py
estudos_seguranca/Projetos Pessoais/DDOS_atack/: ddos.py
estudos_seguranca/Projetos Pessoais/sniffer/: sniffer.py
projetos menores/: baskara.py  music.py  notas-exercise.py
(+8 files in other folders)
